<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lab33.Lab33Fragment">

    <EditText
        android:id="@+id/lab33_y"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lab33_y"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab33_d" />

    <EditText
        android:id="@+id/lab33_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/lab33_d"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/lab33_y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab33_c"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lab33_c"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/lab33_c"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/lab33_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab33_b"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lab33_a"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lab33_a"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/lab33_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/lab33_b"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/lab33_b"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/lab33_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab33_a"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab33_result">

        <TextView
            android:id="@+id/lab33_x1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lab33_x1" />

        <TextView
            android:id="@+id/lab33_x2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lab33_x2" />

        <TextView
            android:id="@+id/lab33_x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lab33_x3" />

        <TextView
            android:id="@+id/lab33_x4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lab33_x4" />
    </LinearLayout>

    <TextView
        android:id="@+id/lab33_result"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/lab33_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab33_y" />

    <TextView
        android:id="@+id/lab33_time"
        android:layout_width="79dp"
        android:layout_height="26dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:text="@string/lab33_time"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lab33_result"
        app:layout_constraintTop_toBottomOf="@+id/lab33_y"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/lab33_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:text="@string/lab33_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>