<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lab31.Lab31Fragment">

    <TextView
        android:id="@+id/lab31_r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="312dp"
        android:layout_marginRight="312dp"
        android:layout_marginBottom="102dp"
        android:text="@string/lab31_r1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lab31_r2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNumber" />

    <TextView
        android:id="@+id/lab31_r2"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="312dp"
        android:layout_marginRight="312dp"
        android:layout_marginBottom="363dp"
        android:text="@string/lab31_r2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab31_r1" />

    <TextView
        android:id="@+id/lab31_time"
        android:layout_width="87dp"
        android:layout_height="24dp"
        android:layout_marginStart="271dp"
        android:layout_marginLeft="271dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginBottom="392dp"
        android:text="@string/lab31_time"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lab31_button" />

    <EditText
        android:id="@+id/inputNumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="49dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/lab31_r1"
        app:layout_constraintEnd_toStartOf="@+id/lab31_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/lab31_input_number" />

    <Button
        android:id="@+id/lab31_button"
        android:layout_width="114dp"
        android:layout_height="41dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="120dp"
        android:text="@string/lab31_button"
        app:layout_constraintBottom_toTopOf="@+id/lab31_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputNumber"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>